keycloak/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    nginx.org/listen-ports: "8080"
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #     - KEYCLOAK_HOST
  rules:
  - host: keycloak.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
